--- a/gb/25/1/19/n14416866.md
+++ b/gb/25/1/19/n14416866.md
@@ -14,10 +14,11 @@
 <p>川普誓言推动具变革性的“美国优先”政策，他的施政方向将牵动全球政治和经济格局。周一的重点集中在总统就职演讲，以及上任首日签署的行政令上。</p>
 <p>周日（1月19日），川普表示，作为总统，他将在本周末首次出访，前往加州视察洛杉矶山火灾造成的损失。</p>
 <p>“我想向所有受加州山火影响的人表达我们的关怀。”川普说，“我将于周五去那里看一看，让它恢复正常。”</p>
-<p><a title="川普总统就职典礼 英文新唐人特别直播 （即时翻译字幕）LIVE #川普就职舞会 #新唐人电视台 1/20/2025" width="640" b="480" src=""></a><a href="https://d2rum6kyy1zd7y.cloudfront.net/F6axKD4Jx"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/WQPM5zvSbFM?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></a></p>
+<p><a title="川普总统就职典礼 英文新唐人特别直播 （即时翻译字幕）LIVE #川普就职舞会 #新唐人电视台 1/20/2025" width="640" b="480" src=""></a><a href="https://dl1ez95kskssm.cloudfront.net/N3txKD4Jd"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/WQPM5zvSbFM?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></a></p>
 <h2>以下是川普就职典礼的更新：</h2>
 <h2>川普签署一系列行政令</h2>
 <p>川普在数千名支持者面前签署一系列行政令，包括撤销拜登的78项行政命令和备忘录；指导政府机构冻结所有监管工作，直到新政府审核完毕；冻结除军队以外的所有联邦工作招募；要求联邦工作人员重返办公室工作；冻结除必要领域外的官员招聘；退出巴黎气候协定。</p>
+<p>此外，他还签署了以下行政令，分别是指示各部门应对通货膨胀；退出巴黎气候条约；一封将转交联合国宣布退出巴黎协定的信，以及“恢复言论自由并防止政府进一步审查言论自由”。</p>
 <p>详情请见<ahref=><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418194.md#1">川普就职首条白宫新闻稿 阐述美国优先政纲</a></p>
 <figure id="attachment_14418359" aria-describedby="caption-attachment-14418359" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/01/id14418359-GettyImages-2194438066.jpg"><img decoding="async" class="size-medium wp-image-14418359" src="https://i.epochtimes.com/assets/uploads/2025/01/id14418359-GettyImages-2194438066-450x283.jpg" alt="" width="450" b="283" /></a><figcaption id="caption-attachment-14418359" class="wp-caption-text">2025年1月20日，在华盛顿特区Capital One Arena 举行的就职游行期间，当中东问题特使Steve Witkoff发表讲话时，遭哈马斯绑架的以色列人质亲属获邀出行，他们手捧照片站在后面。 (Photo by Jim WATSON / AFP) (Photo by JIM WATSON/AFP via Getty Images)</figcaption></figure>
 <h2>特使：川普将为中东提供清晰大胆的提议</h2>
@@ -291,14 +292,13 @@
 <p>四年前总统拜登在就职首日创下签署17个行政令的纪录，而川普很可能会打破这一纪录，创造新高。</p>
 <p>责任编辑：林妍#</p>
 	
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/15/n14414310.md#1">川普就职典礼在即 七大要点一文看懂</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418341.md#1">卢比奥将在参议院投票 确认自己为国务卿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418341.md#1">参议院全票通过卢比奥任川普政府国务卿</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418340.md#1">美参议院委员会通过海格塞斯防长提名</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418267.md#1">拜登卸任后首发声：还有很多事要做</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/10/23/n9763033.md#1" target="_blank">林辉：兵仙韩信辉耀历史 中共歪批其“反动”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/10/n11375488.md#1" target="_blank">冤狱11年半 前大陆律师堂堂正正反迫害 ?</a></li><hr>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/2/22/n11888452.md#1" target="_blank">“土改”和“文革”时的离奇报应</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/11/1/21/n3149437.md#1" target="_blank">追查国际关于天安门自焚伪案十年说明</a></li><hr>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/3/n14405103.md#1">稀奇古怪的转生故事二则：人未死魂已转生猪 死后变猪又回到人身</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414547.md#1">前美军特种兵曝曾在地下设施见过外星科技</a></li>
